# rohans-sdft

./: .llm.md  AGENTS.md  README.md  ROADMAP.md  devlogs.md  synthetic_algebra_dataset.py  task_3.md
megatron_trainer/: .env.example  DESIGN.md  IMPLEMENTATION.md  PLAN.md  README.md  collator.py  config.py  goal.md  logprob_client.py  logprob_server.py  model_utils.py  nccl_comm.py  reflector.py  run.sh  smoke_all_in_container.sh  smoke_test.sh  start_vllm_patched.py  test_checkpoint.sh  test_distributed.py  test_spike.py  train_full.sh  trainer.py  vllm_utils.py
megatron_trainer/env/: __init__.py  api_adapter_env.py  rag_env.py
task_1/: README.md  nccl_demo.py  setup.sh  start_server.sh
task_2/: README.md  launch.sh  pyproject.toml  test_e2e.py
task_2/src/: nccl_comm.py  server.py  trainer.py
task_3/: baseline.py  collator.py  eval.py  launch.sh
train_dir/: .env.example  launch.sh  play.py  pyproject.toml  setup.sh  start_vllm.sh
train_dir/data/synthetic_algebra/: test_sdft.jsonl  train_sdft.jsonl
train_dir/scripts/: convert_raft_to_sdft.py
train_dir/src/: collator.py  config.py  logprob_server.py  loss.py  nccl_comm.py  new_trainer.py  reflector.py  student.py  trainer.py  vllm_utils.py
train_dir/src/env/: __init__.py  api_adapter_env.py  base.py  rag_env.py
